clean up burger menu and z-index, prevent shifting contents and overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,7 @@ body {
 
 .nav-wrapper{
   padding: 0 50px 0 50px;
+  z-index: 2;
 }
 
 .nav-bar{
@@ -300,6 +301,7 @@ ul{
   text-decoration-line: underline;
   text-decoration-thickness: 2px;
   opacity: 85%;
+  z-index: -1;
 }
 
 .coffee-card-user{
@@ -328,6 +330,8 @@ margin-top: 0;
   height: 30px;
   opacity: 80%;
   margin: 0 5px 5px -5px;
+  position: relative;
+  z-index: -1;
 }
 
 .coffee-card-review{
@@ -436,6 +440,8 @@ margin-top: 0;
   height: 1px;
   width: 100%;
   border: none;
+  position: relative;
+  z-index: -1;
   /* border-bottom: solid 2px var(--main-white); */
   background: rgb(255,255,255);
   background: -moz-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(243,243,244,1) 1%, rgba(243,243,244,1) 99%, rgba(255,255,255,0) 100%);
@@ -806,6 +812,12 @@ margin-top: 0;
 
     .nav-wrapper{
       padding: 0;
+      min-height: 178px;
+      /* prevent shrinking when burger is active */
+    }
+
+    .no-user-nav-menu{
+      margin: 20px 0;
     }
    
     .landing-links-container{
@@ -942,11 +954,15 @@ margin-top: 0;
 
     .nav-menu{
       justify-content: flex-start;
-      padding: 10px 0 0 0;
+      padding: 3px 0 0 0;
     }
     
     .nav-item{
       margin: 5px 0;
+    }
+
+    .no-user-nav-menu{
+      margin: 10px 0;
     }
 
     .burger{
